fixed the dropdown button's styling to prevent it from flowing out of the container

--- a/src/sass/components/_flowPanel.scss
+++ b/src/sass/components/_flowPanel.scss
@@ -37,6 +37,12 @@
 
     .two-button-group {
         width: 40px;
+
+        .btn.statcard-button {
+            &:focus {
+                outline: none;
+            }
+        }
     }
     .metrics-container {
         margin-top: 10px;
